--- a/main.css
+++ b/main.css
@@ -1,10 +1,69 @@
 body{
 	background-color: #DAB785;
 }
+@font-face{
+	font-family: "Roboto regular";
+	src:url('fonts/roboto reg.ttf');
+}
 .header{
-	position: absolute;
-	margin: -10px;
-	  background-color: #B34940;
-  height: 66px;
-  width: 1440px;
+position: absolute;
+width: 1348px;
+height: 96px;
+left: 0px;
+top: 0px;
+
+background: #B34940;
+}
+#Almaty_logo{
+position: inherit;
+width: 120px;
+height: 82px;
+left: 127px;
+top: -4px;
+}
+.headerwords{
+position: inherit;
+top: 7px;
+width: 83px;
+height: 23px;
+font-family: 'Roboto regular';
+font-weight: 400;
+font-size: 20px;
+display: flex;
+color: #FFFFFF;
+}
+#aboutcity{
+left: 340px;
+}
+#culture{
+left: 539px;
+}
+#news{
+left: 740px;
+}
+#interes{
+left: 937px;
+}
+#chill{
+left: 1185px;
+}
+
+.slider {
+position: absolute;
+top: 86px;
+  left: 0;
+  right: 0;
+  width: 1348px;
+  height: 600px;
+  overflow: hidden;
+}
+
+.slider-container {
+  display: flex;
+  transition: transform 1s ease;
+}
+
+.slide {
+  width: 1200px;
+  height: 600px;
 }
